travis: enable building master branch
This repo isn't yet to the point where I feel it would worthwhile to
switch to gated commits.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 branches:
   except:
     - /^(wip\/)?(appveyor|msvc|mingw|windows)(\-.+)?$/
-    - /^master$/
+    # - /^master$/
 matrix:
   include:
     ###
