--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,14 +11,13 @@ if(CMAKE_BUILD_TYPE STREQUAL "")
   set(CMAKE_BUILD_TYPE "Debug")
 endif()
 
-find_program(GIT git)
-if(GIT)
-  add_custom_command(OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/munit/munit.c"
-    COMMAND ${GIT} submodule update --init --recursive)
-else()
-  if (NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/munit/munit.c")
+if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/munit/munit.c")
+  find_program(GIT git)
+  if(GIT)
+    execute_process(COMMAND ${GIT} submodule update --init --recursive)
+  else()
     message (FATAL_ERROR "It looks like you don't have submodules checked out.  Please run `git submodule update --init --recursive'")
-  endif ()
+  endif()
 endif()
 
 add_library(munit STATIC munit/munit.c)
