--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -86,7 +86,8 @@ add_executable(test-cmp
   test-cmp.c
   test-common.c
   test-cmp-mmx.c
-  test-cmp-sse.c)
+  test-cmp-sse.c
+  test-cmp-sse2.c)
 target_link_libraries(test-cmp munit m)
 add_test(NAME "/cmp" COMMAND $<TARGET_FILE:test-cmp>)
 target_add_extra_warning_flags(test-cmp)
