--- a/.travis.yml
+++ b/.travis.yml
@@ -171,21 +171,41 @@ matrix:
     ###
     # - os: osx
 
+    ###
+    ## Emscripten — requires CMake 3.4.3.  If anyone is aware of a PPA
+    ## with it please let me know.
+    ###
+    # - env: C_COMPILER=emcc BUILD_TYPE=Debug
+    #   addons:
+    #     apt:
+    #       sources:
+    #       - george-edison55-precise-backports
+    #       packages:
+    #       - cmake
+    #       - cmake-data
+
 before_install:
 ###
 ## If we use the matrix to set CC/CXX Travis overwrites the values,
 ## so instead we use C/CXX_COMPILER, then copy the values to CC/CXX
 ## here (after Travis has set CC/CXX).
 ###
-- if [ "${C_COMPILER}" = "pgcc" ]; then curl 'https://raw.githubusercontent.com/nemequ/pgi-travis/master/install-pgi.sh' | /bin/sh; fi
+- if [ "${C_COMPILER}" = "pgcc" ]; then
+    curl 'https://raw.githubusercontent.com/nemequ/pgi-travis/master/install-pgi.sh' | /bin/sh;
+  elif [ "${C_COMPILER}" = "emcc" ]; then
+    cd "${HOME}";
+    curl -L https://github.com/urho3d/emscripten-sdk/archive/master.tar.gz | tar zx;
+    . emscripten-sdk-master/emsdk_env.sh;
+    SIMDE_CMAKE_ARGS="-DCMAKE_TOOLCHAIN_FILE=${EMSDK}/emscripten/master/cmake/Modules/Platform/Emscripten.cmake -DDISABLE_X86=yes";
+  fi
 - if [ -n "${C_COMPILER}" ]; then export CC="${C_COMPILER}"; fi
 - if [ -z "${BUILD_TYPE}" ]; then export BUILD_TYPE="Coverage"; fi
-- mkdir test/build
-- cd test/build
+- mkdir "${TRAVIS_BUILD_DIR}/test/build"
+- cd "${TRAVIS_BUILD_DIR}/test/build"
 
 script:
 - if [ -n "${C_COMPILER}" ]; then export CC="${C_COMPILER}"; fi
-- cmake .. -DCMAKE_BUILD_TYPE="${BUILD_TYPE}"
+- cmake .. -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" ${SIMDE_CMAKE_ARGS}
 - make VERBOSE=1
 - ./run-tests
 
