--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -76,7 +76,8 @@ if(NOT DISABLE_X86)
     x86/sse3/sse3.c
     x86/ssse3/ssse3.c
     x86/sse4.1/sse4.1.c
-    x86/sse4.2/sse4.2.c)
+    x86/sse4.2/sse4.2.c
+    x86/avx/avx.c)
 else()
   add_definitions(-DDISABLE_X86)
 endif()
@@ -125,7 +126,7 @@ if(LIBM)
   target_link_libraries(run-tests ${LIBM})
 endif()
 if (NOT DISABLE_X86)
-  foreach(tst "/x86/mmx" "/x86/sse" "/x86/sse2" "/x86/sse3" "/x86/ssse3" "/x86/sse4.1" "/x86/sse4.2")
+  foreach(tst "/x86/mmx" "/x86/sse" "/x86/sse2" "/x86/sse3" "/x86/ssse3" "/x86/sse4.1" "/x86/sse4.2" "/x86/avx")
     add_test(NAME "${tst}/${variant}" COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:run-tests> "${tst}")
   endforeach()
 endif()
