--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,30 @@ matrix:
           - g++-4.4
           - cmake
           - cmake-data
+    - env: C_COMPILER=aarch64-linux-gnu-gcc
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - george-edison55-precise-backports
+          packages:
+          - gcc-aarch64-linux-gnu
+          - g++-aarch64-linux-gnu
+          - qemu
+          - cmake
+          - cmake-data
+    - env: C_COMPILER=arm-linux-gnueabihf-gcc
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - george-edison55-precise-backports
+          packages:
+          - gcc-arm-linux-gnueabihf
+          - g++-arm-linux-gnueabihf
+          - qemu
+          - cmake
+          - cmake-data
 
     ###
     ## clang on Linux
@@ -208,6 +232,10 @@ before_install:
     curl -L https://github.com/urho3d/emscripten-sdk/archive/master.tar.gz | tar zx;
     . emscripten-sdk-master/emsdk_env.sh;
     SIMDE_CMAKE_ARGS="-DCMAKE_TOOLCHAIN_FILE=${EMSDK}/emscripten/master/cmake/Modules/Platform/Emscripten.cmake -DDISABLE_X86=yes";
+  elif [ "${C_COMPILER}" = "arm-linux-gnueabihf-gcc" ]; then
+    SIMDE_CMAKE_ARGS="-DCMAKE_TOOLCHAIN_FILE=${TRAVIS_BUILD_DIR}/test/cmake/toolchain-arm-linux-gnueabihf.cmake";
+  elif [ "${C_COMPILER}" = "aarch64-linux-gnu-gcc" ]; then
+    SIMDE_CMAKE_ARGS="-DCMAKE_TOOLCHAIN_FILE=${TRAVIS_BUILD_DIR}/test/cmake/toolchain-aarch64-linux-gnu.cmake";
   fi
 - if [ -n "${C_COMPILER}" ]; then export CC="${C_COMPILER}"; fi
 - if [ -z "${BUILD_TYPE}" ]; then export BUILD_TYPE="Coverage"; fi
@@ -218,7 +246,12 @@ script:
 - if [ -n "${C_COMPILER}" ]; then export CC="${C_COMPILER}"; fi
 - cmake .. -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" ${SIMDE_CMAKE_ARGS}
 - make VERBOSE=1
-- ./run-tests
+- if [ "${C_COMPILER}" = "arm-linux-gnueabihf-gcc" ]; then
+    qemu-arm -L /usr/arm-linxu-gnueabihf ./run-tests
+  elif [ "${C_COMPILER}" = "aarch64-linux-gnu-gcc" ]; then
+    qemu-aarch64 -L /usr/aarch64-linxu-gnu ./run-tests
+  else
+    ./run-tests
 
 after_success:
 - if [ "${BUILD_TYPE}" = "Coverage" ]; then bash <(curl -s https://codecov.io/bash) -f '!*test-common.c'; fi
