--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -130,9 +130,7 @@ if(CFLAG__mfpu_neon)
   set(extra_cflags "${extra_cflags} -mfpu=neon")
 endif()
 
-message(STATUS "extra_cflags=${extra_cflags}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${extra_cflags}")
-message(STATUS "CMAKE_C_FLAGS=${CMAKE_C_FLAGS}")
 
 add_executable(run-tests ${TEST_SOURCES})
 target_link_libraries(run-tests munit)
@@ -147,4 +145,8 @@ endif()
 add_test(NAME "/simd-js" COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:run-tests> "/simd-js")
 target_add_extra_warning_flags(run-tests)
 set_property (TARGET run-tests PROPERTY C_STANDARD "99")
-target_add_compiler_flags(run-tests ${extra_cflags})
+if("${CMAKE_C_COMPILER}" MATCHES "arm-linux-gnueabihf-gcc")
+  target_link_libraries(run-tests -static)
+elseif("${CMAKE_C_COMPILER}" MATCHES "aarch64-linux-gnu-gcc")
+  target_link_libraries(run-tests -static)
+endif()
