neon: start working on NEON instruction set
This is mostly about adding the infrastructure, but it includes
implementations of vdup{,q}_n_{s,u}{8,16,32,64}, vdup{,q}_n_f{32,64},
vld1{,q}_{s,u}{8,16,32,64}, and vld1{,q}_f{32,64}, as well as SIMDe
extensions x_vload{,q}_{s,u}{8,16,32,64} and x_vload{,q}_f{32,64}.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -88,6 +88,9 @@ list(APPEND TEST_SOURCES
   simd-js/int32x4-compare.c
   simd-js/float32x4.c)
 
+list(APPEND TEST_SOURCES
+  arm/neon/vdup_n.c)
+
 foreach(src ${TEST_SOURCES})
   get_filename_component(bn "${src}" NAME_WE)
   if (NOT "${bn}" MATCHES "compare")
