sse2: improve checks for _mm_undefined_* presence
clang 3.7 and earlier is missing it, use __has_builtin to check for
__builtin_ia32_undef128 (which is used to implement the _mm_undefined_*
function).

This also enables a clang-3.6 build on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -166,17 +166,17 @@ matrix:
     #       - clang-3.7
     #       - cmake
     #       - cmake-data
-    # - env: C_COMPILER=clang-3.6
-    #   addons:
-    #     apt:
-    #       sources:
-    #       - llvm-toolchain-precise-3.6
-    #       - ubuntu-toolchain-r-test
-    #       - george-edison55-precise-backports
-    #       packages:
-    #       - clang-3.6
-    #       - cmake
-    #       - cmake-data
+    - env: C_COMPILER=clang-3.6
+      addons:
+        apt:
+          sources:
+          - llvm-toolchain-precise-3.6
+          - ubuntu-toolchain-r-test
+          - george-edison55-precise-backports
+          packages:
+          - clang-3.6
+          - cmake
+          - cmake-data
     # - env: C_COMPILER=clang-3.5
     #   addons:
     #     apt:
