Don't request alignment on unions with MSVC on x86.
Hopefully this will resolve an error which VS is emitting on pretty
much every function in SIMDe about "formal parameter with requested
alignment of 16 won't be aligned".

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,7 @@
 environment:
   matrix:
     - GENERATOR: Visual Studio 14 2015 Win64
+    - GENERATOR: Visual Studio 14 2015
 
 branches:
   except:
